# ImageGeneticAI

./: .gitignore  Gene.py  ImageGene.py  ImageObject.py  algoclasses.py  config.json  main.py  mutation_by_object.py  mutation_by_population.py  pyproject.toml  reference.txt  refined_algo.ipynb  structclasses.py  test.py  test1.py  test2.py
report_doc/Project Proposal/: main.tex
report_doc/final_submission/: 407251_413777_415216_BSCS-12-A.tex  main.tex  system architecture model.archimate
src/: Gene.py  helpers.py  main.py  mutation_by_image_object.py  mutation_by_object.py  mutation_by_population.py  points.py  test2.py  test3.py
