[tool.poetry]
name = "imagegeneticai"
version = "0.1.0"
description = ""
authors = ["Ahmed-Mohiuddin-Shah <mohiuddinlive@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
opencv-python = "^4.10.0.84"
colour-science = "^0.4.6"
matplotlib = "^3.9.2"
raylib = "^5.5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
